Make sure label is aligned correctly

--- a/src/WebComponents/Attributes/PersistentObjectAttributeAsDetail/persistent-object-attribute-as-detail.scss
+++ b/src/WebComponents/Attributes/PersistentObjectAttributeAsDetail/persistent-object-attribute-as-detail.scss
@@ -9,6 +9,7 @@
 
     ::content > button {
         height: var(--theme-h2);
+        line-height: var(--theme-h2);
     }
 }
 
